# remarkable-update-fuse

./: .gitignore  Makefile  README.md  make_for_remarkable.sh  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yml
protobuf/: update_metadata.proto
remarkable_update_fuse/: __init__.py  __main__.py  filesystem.py  fuse.py  image.py  threads.py  update_metadata.proto  update_metadata_pb2.py
remarkable_update_fuse/ext4/: __init__.py  block.py  blockdescriptor.py  directory.py  enum.py  extent.py  htree.py  inode.py  struct.py  superblock.py  volume.py  xattr.py
